fix: image on mobile

--- a/_sass/products-view/rows-2.scss
+++ b/_sass/products-view/rows-2.scss
@@ -168,9 +168,12 @@
     background: #f3d1b2;
   }
   &__item.product-7 &__img img {
-    max-width: 100%;
+    max-width: 84%;
     left: 50%;
     transform: translate(-50%, -50%);
+    @include minBreakpointMD {
+        max-width: 100%;
+    }
   }
   &__item.product-7 &__back {
     background: url("../images/products/back-product-7.svg") no-repeat right
